--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^13.5.0",
 		"autoprefixer": "^10.4.7",
+		"crypto-js": "^4.1.1",
 		"daisyui": "^2.18.1",
 		"dotenv": "^16.0.1",
 		"ethers": "^5.6.9",
